After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738926 - Code convention fixes
Code convention fixes
Status: RESOLVED FIXED
Product: gnome-nibbles
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gnome-nibbles-maint
gnome-nibbles-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-21 12:19 UTC by Sahil Sareen
Modified: 2014-10-21 23:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Code cleanup as per gnome coding conventions (19.30 KB, patch)
2014-10-21 12:19 UTC, Sahil Sareen
committed Details | Review

Description Sahil Sareen 2014-10-21 12:19:36 UTC
Created attachment 289026 [details] [review]
Code cleanup as per gnome coding conventions

Code cleanup as per gnome coding conventions
Comment 1 Michael Catanzaro 2014-10-21 23:31:23 UTC
Attachment 289026 [details] pushed as 93b5cc8 - Code cleanup as per gnome coding conventions