src/games-controls.c
@@ -91,7 +91,7 @@ accel_edited_cb (GtkCellRendererAccel *cell,
   }
 
   /* Duplicate key check */
-  for (i = 0; i <  g_settings_get_int(settings, "players"); i++) {
+  for (i = 0; i <  g_settings_get_int (settings, "players"); i++) {
     if (g_settings_get_int (worm_settings[i], "key-up") == keyval ||
         g_settings_get_int (worm_settings[i], "key-down") == keyval ||
         g_settings_get_int (worm_settings[i], "key-left") == keyval ||
@@ -100,14 +100,14 @@ accel_edited_cb (GtkCellRendererAccel *cell,
 
       GtkWidget *dialog;
 
-      dialog = gtk_message_dialog_new_with_markup (GTK_WINDOW(window),
+      dialog = gtk_message_dialog_new_with_markup (GTK_WINDOW (window),
                                  GTK_DIALOG_DESTROY_WITH_PARENT,
                                  GTK_MESSAGE_WARNING,
                                  GTK_BUTTONS_OK,
                                  "<span weight=\"bold\" size=\"larger\">%s</span>",
                                  _("The shortcut you selected is already assigned."));
 
-      gtk_dialog_run (GTK_DIALOG(dialog));
+      gtk_dialog_run (GTK_DIALOG (dialog));
       gtk_widget_destroy (dialog);
       break;
     }
